# rcrc

./: .gitignore  CMakeLists.txt  README.md  rcrc.h
crc/: crc16.c  crc16.h  crc32.c  crc64.c  crc64.h  crc8.c  crc8.h  crc_poly.c  crc_poly.h
test/: test.c
